aarch32-tests/tests/snapshots/mps3-an536/abt-exception-a32-thumbv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is an data abort exception example
data abort occurred
DFSR (Fault Status Register): Dfsr { fnv: false, cm: false, ext: false, wnr: false, status: Ok(AlignmentFault) }
caught unaligned_from_a32
caught fault on COUNTER
Doing it again
data abort occurred
DFSR (Fault Status Register): Dfsr { fnv: false, cm: false, ext: false, wnr: false, status: Ok(AlignmentFault) }
caught unaligned_from_a32
caught fault on COUNTER
Skipping instruction
Recovered from fault OK!
