aarch32-tests/tests/snapshots/mps3-an536/generic_timer_irq-thumbv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Found PERIPHBASE 0xf0000000
Creating GIC driver @ 0xf0000000 / 0xf0100000
Calling git.setup(0)
Configure Timer Interrupt...
Enabling interrupts...
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 0
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 1
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 2
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 3
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 4
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 5
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 6
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 7
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 8
  > IRQ
    - Timer fired, resetting
  < IRQ
Main loop wake up 9
Timer IRQ test completed OK
