aarch32-tests/tests/snapshots/mps3-an536/gic-map-armv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Found PERIPHBASE 0xf0000000
Creating GIC driver @ 0xf0000000 / 0xf0100000
Calling git.setup(0)
Configure low-prio SGI...
Configure high-prio SGI...
gic.enable_interrupt()
Enabling interrupts...
Send lo-prio SGI
> IRQ
- handle_interrupt_with_id(SGI 3)
- got SGI 3, sending hi-prio SGI 4
> IRQ
- handle_interrupt_with_id(SGI 4)
- got hi-prio SGI 4!
< IRQ
- finished sending hi-prio!
< IRQ
IRQ test completed OK
