aarch32-tests/tests/snapshots/mps3-an536/gic-priority-ceiling-armv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Found PERIPHBASE 0xf0000000
Creating GIC driver @ 0xf0000000 / 0xf0100000
Calling git.setup(0)
Configure low-prio SGI...
Configure high-prio SGI...
gic.enable_interrupt()
Enabling interrupts...
Send lo-prio SGI
> IRQ
- IRQ Handling SGI 3
    - Low prio!
    - Pre lock exit
    - HIGH PRIO SHOULD RUN AFTER THIS
> IRQ
- IRQ Handling SGI 4
    - High prio!
< IRQ
    - HIGH PRIO SHOULD RUN BEFORE THIS
    - Post lock exit
< IRQ
IRQ test completed OK
