aarch32-tests/tests/snapshots/mps3-an536/mpu-setup-thumbv8r-none-eabihf.snap
---
source: aarch32-tests/tests/tests.rs
expression: stdout
---
          UND @ 0x1005bd80..=0x1005fd7f
          SVC @ 0x10063dc0..=0x10067dbf
          ABT @ 0x1006be00..=0x1006fdff
          HYP @ 0x10073e40..=0x10077e3f
          IRQ @ 0x10077ec0..=0x10077eff
          FIQ @ 0x10077f80..=0x10077fbf
          SYS @ 0x1007c000..=0x1007ffff
.vector_table @ 0x08000000..=0x0800ffff
        .text @ 0x08010000..=0x0801ffff
      .rodata @ 0x08020000..=0x0802ffff
        .data @ 0x10000000..=0x0fffffff
         .bss @ 0x10000000..=0x1000ffff
      .uninit @ 0x10010000..=0x1000ffff
Region 00: El1Region { range: 0x1005bd80..=0x1005fd7f, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 01: El1Region { range: 0x10063dc0..=0x10067dbf, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 02: El1Region { range: 0x1006be00..=0x1006fdff, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 03: El1Region { range: 0x10073e40..=0x10077e3f, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 04: El1Region { range: 0x10077ec0..=0x10077eff, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 05: El1Region { range: 0x10077f80..=0x10077fbf, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 06: El1Region { range: 0x1007c000..=0x1007ffff, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 07: El1Region { range: 0x08000000..=0x0800ffff, shareability: NonShareable, access: ReadOnly, no_exec: false     , mair: 0000000000, enable: true       }
Region 08: El1Region { range: 0x08010000..=0x0801ffff, shareability: NonShareable, access: ReadOnly, no_exec: false     , mair: 0000000000, enable: true       }
Region 09: El1Region { range: 0x08020000..=0x0802ffff, shareability: NonShareable, access: ReadOnly, no_exec: true      , mair: 0000000000, enable: true       }
Region 10: El1Region { range: 0x10000000..=0x0fffffff, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 11: El1Region { range: 0x10000000..=0x1000ffff, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 12: El1Region { range: 0x10010000..=0x1000ffff, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000001, enable: true       }
Region 13: El1Region { range: 0xe0000000..=0xffffffff, shareability: NonShareable, access: ReadWrite, no_exec: true      , mair: 0000000002, enable: true       }
